--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,4 @@
 body {margin:0; padding:0;"}
 canvas {border:1px solid blue; width:1600px; height:800px; margin-left:10px; margin-top:10px; display: inline-block;}
 #stats {padding-left: 10px; text-align: left; display: inline-block; vertical-align: top;}
-#tooltip {position: absolute; background-color: black; color: white; padding: 10px;}
+#tooltip {position: absolute; background-color: black; color: white; padding: 10px; white-space: pre;}
