--- a/style/style.css
+++ b/style/style.css
@@ -3,7 +3,7 @@ body {
     padding:0;
 }
 
-canvas {
+canvas#dot {
     border:1px solid blue;
     /*    width:1600px;
           height:800px;*/
@@ -11,6 +11,7 @@ canvas {
     margin-top:10px;
     display: inline-block;
 }
+
 
 #stats {
     padding-left: 10px;
